# dbzero

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  COPYING  Dockerfile  Dockerfile-dev  Dockerfile-package  Dockerfile-python-311-debug  LICENSE  NOTICE  README.md  build.sh  detect_commit.sh  meson.build  meson_options.txt  pyproject.toml  pytest.ini  requirements.txt  run_asan_stress_tests.sh  run_asan_tests.sh  run_memcheck.sh  run_memtest.sh  run_tests.sh
dbzero/: setup.py  (+1 more)
dbzero_ce/: build_package.sh  meson.build  setup.py
dbzero_ce/dbzero_ce/: __init__.py  atomic.py  compare.py  connection.py  dbzero_ce.py  dbzero_ce.template  decorators.py  enum.py  fast_query.py  interfaces.py  locked.py  memo.py  pandas.py  reflection_api.py  select.py  storage_api.py  utilities.py
src/dbzero/bindings/python/: AnyObjectAPI.cpp  AnyObjectAPI.hpp  ArgParse.cpp  ArgParse.hpp  Dict.cpp  Dict.hpp  DictIterator.cpp  DictIterator.hpp  DictView.cpp  DictView.hpp  GlobalMutex.cpp  GlobalMutex.hpp  Index.cpp  Index.hpp  List.cpp  List.hpp  ListIterator.cpp  ListIterator.hpp  Memo.cpp  Memo.hpp  MemoExpiredRef.cpp  MemoExpiredRef.hpp  MemoTypeDecoration.cpp  MemoTypeDecoration.hpp  Migration.cpp  Migration.hpp  ObjectId.cpp  ObjectId.hpp  PyAPI.cpp  PyAPI.hpp  PyAPI_Lock.cpp  PyAPI_Lock.hpp  PyAtomic.cpp  PyAtomic.hpp  PyClass.cpp  PyClass.hpp  PyClassFields.cpp  PyClassFields.hpp  PyCommonBase.hpp  PyEnum.cpp  (+58 more)
src/dbzero/core/memory/: AccessOptions.cpp  AccessOptions.hpp  Address.cpp  Address.hpp  AlgoAllocator.cpp  AlgoAllocator.hpp  Allocator.cpp  Allocator.hpp  BaseLock.cpp  BaseLock.hpp  BitSpace.hpp  BitsetAllocator.hpp  BoundaryLock.cpp  BoundaryLock.hpp  CacheRecycler.cpp  CacheRecycler.hpp  DP_Lock.cpp  DP_Lock.hpp  DirtyCache.cpp  DirtyCache.hpp  MemLock.cpp  MemLock.hpp  Memspace.cpp  Memspace.hpp  MetaAllocator.cpp  MetaAllocator.hpp  OneShotAllocator.cpp  OneShotAllocator.hpp  PageMap.hpp  Prefix.cpp  Prefix.hpp  PrefixCache.cpp  PrefixCache.hpp  PrefixImpl.cpp  PrefixImpl.hpp  PrefixViewImpl.cpp  PrefixViewImpl.hpp  Recycler.hpp  ResourceLock.cpp  ResourceLock.hpp  (+27 more)
src/dbzero/core/storage/: BDevStorage.cpp  BDevStorage.hpp  BaseStorage.cpp  BaseStorage.hpp  BlockIOStream.cpp  BlockIOStream.hpp  CFile.cpp  CFile.hpp  ChangeLog.cpp  ChangeLog.hpp  ChangeLogIOStream.cpp  ChangeLogIOStream.hpp  ChangeLogTypes.hpp  DRAM_IOStream.cpp  DRAM_IOStream.hpp  DiffIndex.cpp  DiffIndex.hpp  DiffWriter.cpp  DiffWriter.hpp  Diff_IO.cpp  Diff_IO.hpp  ExtSpace.cpp  ExtSpace.hpp  MemBaseStorage.cpp  MemBaseStorage.hpp  MemoryStorage.cpp  MemoryStorage.hpp  MetaIOStream.cpp  MetaIOStream.hpp  PageIO.cpp  PageIO.hpp  Page_IO.cpp  Page_IO.hpp  REL_Index.cpp  REL_Index.hpp  SparseIndex.cpp  SparseIndex.hpp  SparseIndexBase.cpp  SparseIndexBase.hpp  SparseIndexQuery.cpp  (+12 more)
src/dbzero/object_model/: CMakeLists.txt  CollectionBase.hpp  CommonBase.hpp  LangCache.cpp  LangCache.hpp  LangConfig.hpp  ObjectBase.hpp  ObjectCatalogue.cpp  ObjectCatalogue.hpp  ObjectModel.cpp  ObjectModel.hpp  class.hpp  config.hpp  has_fixture.hpp  iterators.hpp  meson.build  object.hpp  object_header.cpp  object_header.hpp  value.hpp
src/dbzero/object_model/bytes/: ByteArray.cpp  ByteArray.hpp
src/dbzero/object_model/class/: Class.cpp  Class.hpp  ClassFactory.cpp  ClassFactory.hpp  ClassFields.cpp  ClassFields.hpp  Field.cpp  Field.hpp  FieldID.cpp  FieldID.hpp  MemberID.cpp  MemberID.hpp  Schema.cpp  Schema.hpp  meson.build
src/dbzero/object_model/datetime/: DateTime.cpp  DateTime.hpp
src/dbzero/object_model/dict/: Dict.cpp  Dict.hpp  DictIterator.cpp  DictIterator.hpp  DictView.cpp  DictView.hpp  meson.build
src/dbzero/object_model/enum/: Enum.cpp  Enum.hpp  EnumDef.cpp  EnumDef.hpp  EnumFactory.cpp  EnumFactory.hpp  EnumValue.cpp  EnumValue.hpp
src/dbzero/object_model/index/: Index.cpp  Index.hpp  IndexBuilder.hpp
src/dbzero/object_model/item/: Item.hpp  Pair.hpp
src/dbzero/object_model/iterators/: BaseIterator.hpp  ForwardIterator.cpp  ForwardIterator.hpp  PyObjectIterator.hpp  TypedIterator.hpp  VarArgsIterator.cpp  VarArgsIterator.hpp
src/dbzero/object_model/list/: List.cpp  List.hpp  ListIterator.cpp  ListIterator.hpp  meson.build
src/dbzero/workspace/: AtomicContext.cpp  AtomicContext.hpp  Config.cpp  Config.hpp  DependencyWrapper.hpp  Fixture.cpp  Fixture.hpp  FixtureThreads.cpp  FixtureThreads.hpp  GC0.cpp  GC0.hpp  LockFlags.cpp  LockFlags.hpp  LockedContext.cpp  LockedContext.hpp  MutationLog.cpp  MutationLog.hpp  PrefixCatalog.cpp  PrefixCatalog.hpp  PrefixName.cpp  PrefixName.hpp  ResourceManager.cpp  ResourceManager.hpp  Snapshot.cpp  Snapshot.hpp  Utils.cpp  Utils.hpp  WeakFixtureVector.cpp  WeakFixtureVector.hpp  Workspace.cpp  Workspace.hpp  WorkspaceView.cpp  WorkspaceView.hpp  meson.build
tests/: CMakeLists.txt  CMakeSource.h  CMakeSource.h.in  dbzero_tests.cpp  meson.build
tests/unit_tests/: AlgoAllocatorTest.cpp  BDevStorageTest.cpp  Base32Test.cpp  BaseWorkspaceTest.cpp  BisectTest.cpp  BitSpaceTests.cpp  BitsetAllocatorTest.cpp  BlockIOStreamTest.cpp  BoundaryLockTest.cpp  CMakeLists.txt  CRDT_AllocatorTests.cpp  CapacityTreeTest.cpp  CartesianProductTest.cpp  ChangeLogIOStreamTest.cpp  ChangeLogTest.cpp  ClassFactoryTest.cpp  ComposeTests.cpp  CoreUtilsTests.cpp  DHeapTests.cpp  DRAMSpaceTest.cpp  DiffBufferTest.cpp  DiffIndexTest.cpp  DiffUtilsTest.cpp  Diff_IOTest.cpp  EnumTest.cpp  FT_BaseIndexTest.cpp  FT_FixedKeyIteratorTest.cpp  FT_SpanIteratorTest.cpp  FT_TagProductTest.cpp  FixedBitsetTests.cpp  FlagSetTests.cpp  IndexTest.cpp  IttyIndexTest.cpp  KV_IndexTest.cpp  LangCacheTest.cpp  LimitedMatrixCacheTests.cpp  LimitedMatrixTests.cpp  LimitedPoolTest.cpp  LimitedVectorTests.cpp  LoFiStoreTests.cpp  (+55 more)
tests/utils/: CMakeLists.txt  EmbeddedAllocator.cpp  EmbeddedAllocator.hpp  PrefixProxy.hpp  SubClass.cpp  SubClass.hpp  TP_Utils.cpp  TP_Utils.hpp  TestBase.cpp  TestBase.hpp  TestWorkspace.cpp  TestWorkspace.hpp  WorkspaceBaseTest.hpp  WorkspaceTest.cpp  WorkspaceTest.hpp  cp_data_1.cpp  cp_data_1.hpp  diff_data_1.cpp  diff_data_1.hpp  meson.build  utils.cpp  utils.hpp
(+589 files in other folders)
