[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'dbzero'
version = '0.1.0'
description = 'A state management system for Python 3.x that unifies your application's business logic, data persistence, and caching into a single, efficient layer.'
readme = 'README.md'
requires-python = '>=3.9'
license = {file = 'LICENSE'}
authors = [
]
dependencies = [
    'fasteners==0.19'
]

classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
]

[tool.semantic_release.remote]
password = { env = "GH_TOKEN" }

[tool.pytest.ini_options]
testpaths = ["python_tests"]