python_sources = [
    'dbzero_ce/__init__.py',
    'dbzero_ce/atomic.py',
    'dbzero_ce/connection.py',
    'dbzero_ce/dbzero_ce.py',
    'dbzero_ce/decorators.py',
    'dbzero_ce/enum.py',
    'dbzero_ce/fast_query.py',
    'dbzero_ce/memo.py',
    'dbzero_ce/reflection_api.py',
    'dbzero_ce/storage_api.py',
    'dbzero_ce/utilities.py',
    'dbzero_ce/locked.py',
    'dbzero_ce/select.py'
]

py3_inst.install_sources(
  python_sources,     
    subdir: 'dbzero_ce'
)