
tests_files = [
'PrefixImplTest.cpp',
'ChangeLogIOStreamTest.cpp',
'SparseIndexTest.cpp',
'LimitedPoolTest.cpp',
'SGBCompressedLookupTreeTest.cpp',
'ClassFactoryTest.cpp',
'VBVectorTests.cpp',
'RLE_SequenceTest.cpp',
'BitsetAllocatorTest.cpp',
'PackedIntTest.cpp',
'FlagSetTests.cpp',
'KV_IndexTest.cpp',
'VMapTest.cpp',
'CoreUtilsTests.cpp',
'VSortedVectorTest.cpp',
'MetaAllocatorTest.cpp',
'BisectTest.cpp',
'SGBLookupTreeTest.cpp',
'WorkspaceTest.cpp',
'SlabAllocatorTests.cpp',
'MemspaceTests.cpp',
'ObjectModelTest.cpp',
'AlgoAllocatorTest.cpp',
'VBIndexTests.cpp',
'DRAMSpaceTest.cpp',
'VObjectTest.cpp',
'Base32Test.cpp',
'BitSpaceTests.cpp',
'VSpaceTests.cpp',
'DHeapTests.cpp',
'BlockIOStreamTest.cpp',
'RangeTreeTest.cpp',
'SGB_TreeTests.cpp',
'ObjectTests.cpp',
'FT_BaseIndexTest.cpp',
'ROWO_MutexTest.cpp',
'CRDT_AllocatorTests.cpp',
'ValueTableTest.cpp',
'IttyIndexTest.cpp',
'MorphingBIndexTest.cpp',
'FixedBitsetTests.cpp',
'BaseWorkspaceTest.cpp',
'PrefixCacheTest.cpp',
'BDevStorageTest.cpp',
'SwinePtrTest.cpp']

foreach file : tests_files
    tests_sources += meson.current_source_dir() / file
endforeach

    