
tests_files = [
'PackedIntTest.cpp',
'SwinePtrTest.cpp',
'RLE_SequenceTest.cpp',
'DHeapTests.cpp',
'BitsetAllocatorTest.cpp',
'DRAMSpaceTest.cpp',
'ROWO_MutexTest.cpp',
'ValueTableTest.cpp',
'VMapTest.cpp',
'VSortedVectorTest.cpp',
'IttyIndexTest.cpp',
'BitSpaceTests.cpp',
'AlgoAllocatorTest.cpp',
'FT_BaseIndexTest.cpp',
'VSpaceTests.cpp',
'FlagSetTests.cpp',
'VBIndexTests.cpp',
'ObjectTests.cpp',
'ChangeLogIOStreamTest.cpp',
'MorphingBIndexTest.cpp',
'SlabAllocatorTests.cpp',
'KV_IndexTest.cpp',
'BisectTest.cpp',
'CoreUtilsTests.cpp',
'SparseIndexTest.cpp',
'BaseWorkspaceTest.cpp',
'BDevStorageTest.cpp',
'VBVectorTests.cpp',
'RangeTreeTest.cpp',
'LimitedPoolTest.cpp',
'BlockIOStreamTest.cpp',
'SGBLookupTreeTest.cpp',
'WorkspaceTest.cpp',
'ObjectModelTest.cpp',
'PrefixImplTest.cpp',
'ClassFactoryTest.cpp',
'PrefixCacheTest.cpp',
'MemspaceTests.cpp',
'SGB_TreeTests.cpp',
'VObjectTest.cpp',
'FixedBitsetTests.cpp',
'SGBCompressedLookupTreeTest.cpp',
'MetaAllocatorTest.cpp',
'CRDT_AllocatorTests.cpp']

foreach file : tests_files
    tests_sources += meson.current_source_dir() / file
endforeach

    