subdir('index')
subdir('object')
subdir('tags')
subdir('value')
subdir('set')
subdir('iterators')
subdir('class')
subdir('pandas')
subdir('tuple')
subdir('list')
subdir('dict')
subdir('datetime')

all_srcs += [
meson.current_source_dir() / 'LangCache.cpp',
meson.current_source_dir() / 'object_header.cpp',
meson.current_source_dir() / 'ObjectCatalogue.cpp',
meson.current_source_dir() / 'ObjectModel.cpp']

        