subdir('class')
subdir('set')
subdir('pandas')
subdir('datetime')
subdir('tuple')
subdir('iterators')
subdir('object')
subdir('list')
subdir('dict')
subdir('index')
subdir('value')
subdir('tags')

all_srcs += [
meson.current_source_dir() / 'ObjectModel.cpp',
meson.current_source_dir() / 'LangCache.cpp',
meson.current_source_dir() / 'object_header.cpp',
meson.current_source_dir() / 'ObjectCatalogue.cpp']

        