
all_srcs += [
meson.current_source_dir() / 'GC0.cpp',
meson.current_source_dir() / 'Workspace.cpp',
meson.current_source_dir() / 'PrefixCatalog.cpp',
meson.current_source_dir() / 'Fixture.cpp',
meson.current_source_dir() / 'ResourceManager.cpp',
meson.current_source_dir() / 'FixtureThreads.cpp',
meson.current_source_dir() / 'WorkspaceView.cpp']

        