subdir('types')
subdir('Pandas')

all_srcs += [
meson.current_source_dir() / 'ListIterator.cpp',
meson.current_source_dir() / 'DictIterator.cpp',
meson.current_source_dir() / 'Index.cpp',
meson.current_source_dir() / 'Tuple.cpp',
meson.current_source_dir() / 'dbzero.cpp',
meson.current_source_dir() / 'PyObjectTagManager.cpp',
meson.current_source_dir() / 'Set.cpp',
meson.current_source_dir() / 'PyInternalAPI.cpp',
meson.current_source_dir() / 'WhichType.cpp',
meson.current_source_dir() / 'TupleIterator.cpp',
meson.current_source_dir() / 'PyTypeManager.cpp',
meson.current_source_dir() / 'Dict.cpp',
meson.current_source_dir() / 'DictView.cpp',
meson.current_source_dir() / 'List.cpp',
meson.current_source_dir() / 'ObjectId.cpp',
meson.current_source_dir() / 'PyWorkspace.cpp',
meson.current_source_dir() / 'PyAPI.cpp',
meson.current_source_dir() / 'SetIterator.cpp',
meson.current_source_dir() / 'Utils.cpp',
meson.current_source_dir() / 'PyTagSet.cpp',
meson.current_source_dir() / 'PyToolkit.cpp',
meson.current_source_dir() / 'Memo.cpp',
meson.current_source_dir() / 'PySnapshot.cpp',
meson.current_source_dir() / 'PyObjectIterator.cpp']

        