
all_srcs += [
meson.current_source_dir() / 'ResourceLock.cpp',
meson.current_source_dir() / 'PrefixCache.cpp',
meson.current_source_dir() / 'MetaAllocator.cpp',
meson.current_source_dir() / 'Prefix.cpp',
meson.current_source_dir() / 'MemLock.cpp',
meson.current_source_dir() / 'AlgoAllocator.cpp',
meson.current_source_dir() / 'mptr.cpp',
meson.current_source_dir() / 'CacheRecycler.cpp',
meson.current_source_dir() / 'SlabAllocator.cpp',
meson.current_source_dir() / 'BoundaryLock.cpp',
meson.current_source_dir() / 'utils.cpp',
meson.current_source_dir() / 'AccessOptions.cpp',
meson.current_source_dir() / 'Allocator.cpp',
meson.current_source_dir() / 'SlabRecycler.cpp',
meson.current_source_dir() / 'OneShotAllocator.cpp',
meson.current_source_dir() / 'Memspace.cpp']

        