
all_srcs += [
meson.current_source_dir() / 'BlockIOStream.cpp',
meson.current_source_dir() / 'ChangeLogIOStream.cpp',
meson.current_source_dir() / 'BDevStorage.cpp',
meson.current_source_dir() / 'BaseStorage.cpp',
meson.current_source_dir() / 'CFile.cpp',
meson.current_source_dir() / 'DRAM_IOStream.cpp',
meson.current_source_dir() / 'Storage0.cpp',
meson.current_source_dir() / 'PageIO.cpp',
meson.current_source_dir() / 'SparseIndex.cpp']

        