
all_srcs += [
meson.current_source_dir() / 'IteratorVisitor.cpp',
meson.current_source_dir() / 'FT_ANDIterator.cpp',
meson.current_source_dir() / 'FT_Iterator.cpp',
meson.current_source_dir() / 'FT_ANDNOTIterator.cpp',
meson.current_source_dir() / 'FT_BaseIndex.cpp',
meson.current_source_dir() / 'FT_ORXIterator.cpp',
meson.current_source_dir() / 'FT_IteratorBase.cpp',
meson.current_source_dir() / 'QueryHash.cpp']

        